# multilingual

./: .gitignore  README.md  cookbook.yaml
.euler/: euler.yaml
.euler/results/: p001.yaml
.euler/runner/: run.py
.euler/statements/: p001.yaml
.euler/templates/: solution.py.jinja  solution.rs.jinja
.github/workflows/: build.yml  lint.yml  tests.yml
python/: cookbook.yaml  pyproject.toml
python/src/lib/: __version__.py  exceptions.py  numbers.py
python/src/solutions/: p001.py
python/tests/lib/: test_numbers.py
rust/: Cargo.toml  cookbook.yaml
rust/.cargo/: config.toml
rust/src/lib/: numbers.rs
rust/src/solutions/: p001.rs
rust/tests/: number_tests.rs
