[build-system]
requires = [
    "phosphorus>=0.5",
]
build-backend = "phosphorus.construction.api"

[project]
name = "multilingual"
version = "1.0.0"

authors = [
    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
]
license = { text = "BSD-3-Clause" }

description = "Example problems"

requires-python = ">=3.13"

[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13",
    "ipython~=8.29",
]
lint = [
    "black~=24.10",
    "mypy~=1.13",
    "ruff~=0.7",
]
test = [
    "pytest~=8.3",
]

[tool.black]
target-version = [
    "py312",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "E501",
    "FIX002",
    "PLR09",
    "TD002",
    "TD003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PLR2004",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = "tests"
