[package]
name = "multilingual"
version = "1.0.0"
edition = "2021"

authors = ["Stephanos Kuma <stephanos@kuma.ai>"]
description = "Example problems"
license = "BSD-3-Clause"

[profile.release]
opt-level = 3

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "p001"
path = "src/solutions/p001.rs"
